# knot-resolver

./: .clang-tidy  .dir-locals.el  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.manager.yml  .gitlab-ci.yml  .gitmodules  .luacheckrc  .mailmap  .python-version  .readthedocs.yaml  .travis.yml  ARCHITECTURE.md  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  CodingStyle  Dockerfile  Makefile  Makefile.am  NEWS  README.md  bench_sysrepo.sh  bench_sysrepo_statistics.sh  bootstrap  build_c_extensions.py  config  config.mk  configure.ac  coverage.mk  docker-compose.yml  help.mk  knot-resolver.files  knot-resolver.includes  makefile  meson.build  meson_options.txt  (+9 more)
bench/: bench.mk  bench_lru.c  bench_lru_set1.tsv  bench_tls.sh  meson.build
client/: client.mk  kresc  kresc.c  kresc.lua.in  meson.build
client/.packaging/: test.sh
client/packaging/: test.sh
contrib/: asan.h  backtrace.c  backtrace.h  base32hex.c  base32hex.h  base32hex.spdx  base64.c  base64.h  base64.spdx  base64url.c  base64url.h  cleanup.h  config.h  contrib.mk  dynarray.h  dynarray.spdx  lua_utils.c  lua_utils.h  macros.h  memcheck.h  mempattern.c  mempattern.h  meson.build  wire.h  wire.spdx
contrib/bpf/: bpf_helpers.h
contrib/dnstap/: dnstap.pb-c.h
contrib/libfaketime/: libfaketime.1.dylib  libfaketime.so.1  libfaketimeMT.so.1
contrib/libngtcp2/: LICENSE  meson.build
contrib/licenses/: BSD-MIT  CC0  LGPL2
contrib/lmdb/: mdb.c  midl.c  midl.h
contrib/murmurhash3/: LICENSE  murmurhash3.c  murmurhash3.h  murmurhash3.spdx
contrib/openbsd/: siphash.c  siphash.h
contrib/quicly/: cc-reno.c  cc.h  constants.h  defaults.c  defaults.h  frame.c  frame.h  loss.h  maxsender.h  quicly.c  quicly.h  ranges.c  recvstate.c  recvstate.h  sendstate.c  sendstate.h  sentmap.c  sentmap.h  streambuf.c  streambuf.h
contrib/ucw/: LICENSE  alloc.h  config.h  heap.c  heap.h  lib.h  libucw.spdx  lists.c  lists.h  mempool-fmt.c  mempool.c  mempool.h
daemon/: Makefile.am  README.rst  af_xdp.c  af_xdp.h  bindings.c  bindings.h  blcnn.pt  cmd.c  cmd.h  daemon.mk  defer.c  defer.h  dnamelimiting.c  dnamelimiting.h  dns_tunnel_filter.c  dns_tunnel_filter.h  engine.c  engine.h  ffimodule.c  ffimodule.h  http.c  http.h  io.c  io.h  kresc.c  kresolved.mk  layered-protocols.rst  libblcnn.cpp  libblcnn.h  main.c  meson.build  mmapped.c  mmapped.h  network.c  network.h  proxyprotocol.c  proxyprotocol.h  proxyv2.c  proxyv2.h  qr_task.c  (+33 more)
daemon/bindings/: api.h  cache.c  cache.rst  event.c  event.rst  impl.c  impl.h  kres.c  kres.h  modules.c  modules.rst  net.c  net.rst  net_buffering.rst  net_client.rst  net_dns_tweaks.rst  net_server.rst  net_tlssrv.rst  net_xdpsrv.rst  worker.c  worker.rst
daemon/cache.test/: clear.test.lua  testroot.zone  testroot.zone.unsigned
daemon/cache.test.integr/: cache_clear.rpl  deckard.yaml  kresd_config.j2  testroot.zone
daemon/dnamelimiting.test/: tests.c  tests.inc.c
daemon/kxsk/: bpf-user.c  (+2 more)
doc/: Doxyfile  NEWS.rst  README.md  advanced-no-manager.rst  architecture-gc.rst  architecture-kresd.rst  architecture-manager.drawio  architecture-manager.rst  architecture-schema.drawio  architecture.drawio  architecture.rst  build.rst  conf.py  config-answer-reordering.rst  config-cache-prefill.rst  config-cache.rst  config-debugging.rst  config-dns64.rst  config-dnssec-glue.rst  config-dnssec-ta.rst  config-dnssec.rst  config-edns-keepalive.rst  config-experimental.rst  config-forward.rst  config-local-data.rst  config-logging-bogus.rst  config-logging-debugging.rst  config-logging-header.rst  config-logging-monitoring.rst  config-lua-dnssec.rst  config-lua-logging-monitoring.rst  config-lua-network.rst  config-lua-overview.rst  config-lua-performance.rst  config-lua.rst  config-monitoring-stats.rst  config-network-client.rst  config-network-forwarding.rst  config-network-server-tls.rst  config-network-server.rst  (+114 more)
etc/: config.cluster  config.docker  config.isp  config.personal  config.splitview  etc.mk  icann-ca.pem  meson.build  root.hints
lib/: Makefile.am  README.rst  cache.c  cache.h  cdb.h  cdb_lmdb.c  cdb_lmdb.h  client_subnet.h  context.c  context.h  defines.h  delegpt.c  delegpt.h  dnssec.c  dnssec.h  info.c  kresc.c  kru-avx2.c  kru-decay.inc.c  kru-generic.c  kru-utils.h  kru.h  kru.inc.c  layer.h  lib.mk  libkresolve.mk  log.c  log.h  meson.build  mmapped.c  mmapped.h  module.c  module.h  nslist.c  nslist.h  nsrep.c  nsrep.h  proto.c  proto.h  resolve-impl.h  (+26 more)
manager/: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .python-version  ERROR_HANDLING.md  Makefile  README.md  build.py  knot-resolver-manager.service  knot-resolver.service  main.c  meson.build  package.json  poe  pyproject.toml  pyrightconfig.json  setup.py
modules/: README.md  README.rst  meson.build  modules.mk  rfc7706.rst
python/: constants.py.in  knot_resolver.py.in  knot_resolver_build_options.py.in  meson.build  setup.py.in
systemd/: 90-kresd.preset  README.md  README.rst  knot-resolver-control.socket  knot-resolver-tls.socket  knot-resolver.service  knot-resolver.service.in  knot-resolver.socket  kres-cache-gc.service.in  kres-watcher.service.in  kresd-control.socket  kresd-control@.socket  kresd-control@.socket.in  kresd-control@1.socket  kresd-doh.socket  kresd-tls.socket  kresd-tls@.socket  kresd-tls@1.socket  kresd-webmgmt.socket  kresd.service  kresd.socket  kresd.systemd.7.in  kresd.target  kresd@.service  kresd@.service.in  kresd@.socket  kresd@1.service  kresd@1.socket  meson.build  multiinst.rst
tests/: .gitignore  Makefile.am  README.md  README.rst  asan.suppr  clang_scan_build.sh  context.c  genconfig.sh  hints_zone.j2  integration.mk  kresd.j2  kresd_config.j2  lib-includes.cpp  meson.build  mock_calls.c  mock_cmodule.c  mock_gomodule.c  packaging-doc.py  packaging.py  resolve.c  runtests  test.h  test_array.c  test_cache.c  test_context.c  test_critbit.c  test_generics.c  test_integration.c  test_integration.mk  test_integration.py  test_lru.c  test_map.c  test_module.c  test_pack.c  test_queue.c  test_resolve.c  test_rplan.c  test_set.c  test_trie.c  test_utils.c  (+3 more)
(+2416 files in other folders)
